<?xml version="1.0"?>
<package format="3">
  <name>coordinate_transformer</name>
  <version>0.1.0</version>
  <description>
    Библиотека для преобразования координат для ROS2. 
    Реализует прямое и обратное преобразование с использованием tf2, загрузку трансформаций и проверку границ.
  </description>
  <maintainer email="eks@gk-93.ru">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

